fix: prevent automatic dark mode background on mobile browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@
   --color-secondary: #ff917d;
   --color-secondary-hover: #ff7c6f;
 
+  color-scheme: light;
+
   /* button main color */
   --color-button-main: var(--color-secondary);
   --color-button-main-hover: var(--color-secondary-hover);
@@ -25,13 +27,6 @@
 [data-theme="SUNSHINE"] {
   --color-button-main: var(--color-primary);
   --color-button-main-hover: var(--color-primary-hover);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
